test_translator/tests/data/checkpoint_1/core/pass/03_truthy_falsy/solution.js
export function is_positive(n) {
    return n > 0;
}
